# MatrixEngine

./: .gitignore  CMakeLists.txt  Cargo.toml  MatrixEngine.sln  README.md  main.cpp
MatrixEngine/: Actor.cs  Directions.cs  Engine.cs  InputHandler.cs  Interactible.cs  Logging.cs  MatrixEngine - Backup.csproj  MatrixEngine.cpp  MatrixEngine.csproj  MatrixEngine.vcxproj  MatrixEngine.vcxproj.filters  MatrixMath.cs  Scene.cs  Transform.cs  main.cpp
MatrixEngine/Animation/: Animation.cs  AnimationGroup.cs  AnimationSequence.cs
MatrixEngine/App/: App.cs  Camera.cs  Debug.cs  KeyHandler.cs  SpriteRenderer.cs
MatrixEngine/Behaviors/: Behavior.cs  BehaviorNotFoundException.cs  ECSException.cs  RectBehavior.cs  TestBehavior.cs  TilemapBehavior.cs  TilemapRendererBehavior.cs
MatrixEngine/Components/: Component.cs
MatrixEngine/Content/: AudioManager.cs  FontManager.cs  TextureManager.cs
MatrixEngine/ECS/: Actor.cs  App.cs  Engine.cs  KeyHandler.cs  Scene.cs  TestBehavior.cs  Transform.cs
MatrixEngine/Engine/: Application.cpp  Application.h  Engine.h  Entry.cpp  Entry.h
MatrixEngine/Framework/: App.cs  Camera.cs  InputHandler.cs  KeyHandler.cs  Scene.cs  Utils.cs
MatrixEngine/GameObjects/: GameObject.cs
MatrixEngine/MathM/: MathUtils.cs
MatrixEngine/MatrixMath/: Line.cs  MatrixMath.cs  Physics.cs  Rect.cs
MatrixEngine/Physics/: Circle.cs  Physics.cs  PhysicsEngine.cs  Rect.cs  RectPhysics.cs
MatrixEngine/Plugins/: PhysicsPlugin.cs  Plugin.cs  RendererPlugin.cs
MatrixEngine/Renderer/: CanvasRenderer.cs  Renderer.cs
MatrixEngine/Renderers/: CanvasRenderer.cs  LightRenderer.cs  Renderer.cs  SpriteRenderer.cs
MatrixEngine/Scenes/: Scene.cs
MatrixEngineTests/: CameraControllerComponent.cs  CounterProvider.cs  MatrixEngineTests.csproj  Program.cs  ProgramTilemaps.cs  TestResizeTilemapComponent.cs
example/: Cargo.toml
examples/: basic.rs  window.rs
reflection/: Cargo.toml
reflection_macro_attribute/: Cargo.toml
reflection_macro_attribute/src/: lib.rs
src/: access.rs  components.rs  dispatchers.rs  engine.rs  entity.rs  event_loop.rs  events.rs  lib.rs  lockable.rs  macros.rs  main.rs  mod.rs  query.rs  registry.rs  resources.rs  runtime.rs  scene.rs  schedulers.rs  server_client.rs  systems.rs  thread_pool.rs  world.rs
tests/: main.rs  test.rs
(+390 files in other folders)
