[package]
name = "matrix_engine"
version = "0.1.0"
edition = "2021"
description = "a small game engine developed by drmatrix"
license = ""


[dependencies]
bytemuck = { version = "1.18.0", features = ["derive"] }

image = { version = "0.25.2", default-features = false, features = [
    "png",
    "jpeg",
] }
lazy_static = "1.5.0"
num-traits = "0.2.19"
num_cpus = "1.16.0"
paste = "1.0.15"
scoped_threadpool = "0.1.9"
tokio = { version = "1", features = ["rt"] }
wgpu = "22.1.0"
winit = "0.30.5"

[[example]]
name = "run"
[[example]]
name = "multithreaded"
[[example]]
name = "math"
