[package]
name = "matrix_engine"
version = "0.1.0"
edition = "2024"


[dependencies]
anymap = "0.12.1"
bytemuck = "1.24.0"
image = "0.25.8"
num-traits = "0.2.19"
paste = "1.0.15"
rayon = "1.11.0"
tokio = { version = "1.47.1", features = ["rt"] }
wgpu = "27.0.1"
winit = "0.30.12"

[profile.release]
debug = true
