[package]
name = "reflection_macro_attribute"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
reflection = { path = "../reflection" }
syn =  {version = "1.0.98", features = ["full"]}
quote = "1.0"
